force-app/main/default/objects/PlanificacionLlamadas__c/PlanificacionLlamadas__c.object-meta.xml
<CustomObject>
    <label>Planificacion de Llamadas</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Planificacion de Llamadas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planificacion de Llamadas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>