force-app/main/default/objects/PlanificacionLlamadas__c/fields/CESS_Area__c.field-meta.xml
<CustomField>
    <fullName>CESS_Area__c</fullName>
    <label>Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>Sevilla</fullName>
            </value>
            <value>
                <fullName>Prestamos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>