force-app/main/default/objects/PlanificacionLlamadas__c/fields/CESS_Date__c.field-meta.xml
<CustomField>
    <fullName>CESS_Date__c</fullName>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>