force-app/main/default/objects/PlanificacionLlamadas__c/fields/CESS_DateDuplicateRule__c.field-meta.xml
<CustomField>
    <fullName>CESS_DateDuplicateRule__c</fullName>
    <label>Fecha Regla Duplicados</label>
    <length>80</length>
    <type>Text</type>
</CustomField>