force-app/main/default/objects/PlanificacionLlamadas__c/fields/CESS_LlamadasP0900__c.field-meta.xml
<CustomField>
    <fullName>CESS_LlamadasP0900__c</fullName>
    <label>09:00-10:00</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>