force-app/main/default/objects/PlanificacionLlamadas__c/fields/CESS_LlamadasP1000__c.field-meta.xml
<CustomField>
    <fullName>CESS_LlamadasP1000__c</fullName>
    <label>10:00-11:00</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>