force-app/main/default/objects/PlanificacionLlamadas__c/fields/CESS_LlamadasP1100__c.field-meta.xml
<CustomField>
    <fullName>CESS_LlamadasP1100__c</fullName>
    <label>11:00-12:00</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>