force-app/main/default/objects/PlanificacionLlamadas__c/fields/CESS_Type__c.field-meta.xml
<CustomField>
    <fullName>CESS_Type__c</fullName>
    <description>Indicates if the Record is one of the default Call limits or for a custom day</description>
    <inlineHelpText>Estándar - El valor que se consultara por defecto para ese día de la semana. Debe de existir un registro estándar por cada Area para cada día de la semana. 

Custom - En caso de existir,  los limites de llamadas para la fecha serán los indicados en el registro.</inlineHelpText>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estandar</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>