force-app/main/default/objects/PlanificacionLlamadas__c/recordTypes/CESS_LlamadasPlanificadas.recordType-meta.xml
<RecordType>
    <fullName>CESS_LlamadasPlanificadas</fullName>
    <active>true</active>
    <label>Llamadas Planificadas</label>
</RecordType>