force-app/main/default/objects/PlanificacionLlamadas__c/validationRules/CESS_Fecha.validationRule-meta.xml
<ValidationRule>
    <fullName>CESS_Fecha</fullName>
    <active>true</active>
    <errorConditionFormula>CESS_Date__c  
	 &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>CESS_Date__c</errorDisplayField>
    <errorMessage>La fecha debe de ser igual o mayor al fecha de hoy</errorMessage>
</ValidationRule>