force-app/main/default/objects/PlanificacionLlamadas__c/listViews/Sevilla_Tipo_Custom.listView-meta.xml
<ListView>
    <fullName>Sevilla_Tipo_Custom</fullName>
    <columns>NAME</columns>
    <columns>CESS_Area__c</columns>
    <columns>CESS_Type__c</columns>
    <columns>CESS_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CESS_Area__c</field>
        <operation>equals</operation>
        <value>Sevilla</value>
    </filters>
    <filters>
        <field>CESS_Type__c</field>
        <operation>equals</operation>
        <value>Custom</value>
    </filters>
    <label>Sevilla Tipo Custom</label>
</ListView>