force-app/main/default/objects/PlanificacionLlamadas__c/listViews/Sevilla_TipoEstandar.listView-meta.xml
<ListView>
    <fullName>Sevilla_TipoEstandar</fullName>
    <columns>NAME</columns>
    <columns>CESS_Area__c</columns>
    <columns>CESS_Type__c</columns>
    <columns>CESS_DayOfWeek__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CESS_Area__c</field>
        <operation>equals</operation>
        <value>Sevilla</value>
    </filters>
    <filters>
        <field>CESS_Type__c</field>
        <operation>equals</operation>
        <value>Estandar</value>
    </filters>
    <label>Sevilla Tipo Estandar</label>
</ListView>