force-app/main/default/objects/PlanificacionLlamadas__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>CESS_Area__c</columns>
    <columns>CESS_Type__c</columns>
    <columns>CESS_DayOfWeek__c</columns>
    <columns>CESS_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>